Reduce dependency to Guava.